[tool.poetry]
name = "genestack"
version = "1.0"
description = "Genestack deployment tooling and docs"
authors = ["Genestack Contributors"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
ansible = "10.7.0"
cryptography = "43.0.1"
jinja2 = "3.1.5"
jmespath = "1.0.1"
jsonschema = "<=4.23.0"
markupsafe = "2.1.3"
netaddr = "0.9.0"
pbr = "5.11.1"
"ruamel.yaml" = "0.19.1"
kubernetes = ">=24.2.0"
openstacksdk = ">=1.0.0"
python-openstackclient = "8.2.0"
dictdiffer = "0.9.0"

[tool.poetry.group.runtime.dependencies]
ansible-compat = "4.1.11"
ansible-lint = { version= "24.2.0", markers = "platform_system != 'Windows'" }
attrs = "23.2.0"
black = "24.3.0"
bracex = "2.4"
click = "8.1.7"
filelock = "3.13.1"
jsonschema = "4.21.1"
jsonschema-specifications = "2023.12.1"
markdown-it-py = "3.0.0"
mdurl = "0.1.2"
mypy-extensions = "1.0.0"
pathspec = "0.12.1"
platformdirs = "4.2.0"
pygments = "2.17.2"
referencing = "0.33.0"
reno = "4.0.0"
rich = "13.7.0"
rpds-py = "0.17.1"
"ruamel.yaml" = "0.19.1"
subprocess-tee = "0.4.1"
tomli = "2.0.1"
typing-extensions = "4.12.0"
wcmatch = "8.5"
yamllint = "1.35.1"
pre-commit = "4.1.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "*"
mkdocs-material = "*"
mkdocs-material-adr = "*"
mkdocs-swagger-ui-tag = "*"
mkdocs-glightbox = "*"
markdown-exec = "*"
reno = "4.0.0"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"
